--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,56 +1,58 @@
 pipeline {
-  agent any
-
-  environment {
-    DIRECTORY_PATH = 'dummy path to code'
-    TESTING_ENVIRONMENT = 'test-env'
-    PRODUCTION_ENVIRONMENT = 'Vienna'
-  }
-
-  triggers {
-    pollSCM(
-      // Delay in seconds before polling for changes
-      delay: 5,
-      // Triggers the job on every SCM (source code management) change
-      scmVar: '@scmVar'
-    )
-  }
-
-  stages {
-    stage('Build') {
-      steps {
-        echo "fetch the source code from the directory path specified by the environment variable"
-        echo "compile the code and generate any necessary artifacts"
-      }
+    agent any
+    triggers {
+        // Trigger the pipeline on a push to the repository
+        githubPush()
     }
-    stage('Test') {
-      steps {
-        echo "unit tests"
-        echo "integration tests"
-      }
+    environment {
+        DIRECTORY_PATH = 'dummy path to code'
+        TESTING_ENVIRONMENT = 'test-env'
+        PRODUCTION_ENVIRONMENT = 'Vienna' 
     }
-    stage('Code Quality Check') {
-      steps {
-        echo "Check the quality of the code"
-      }
-    }
-    stage('Deploy') {
-      steps {
-        echo "deploy the application to a testing environment specified by the environment variable"
-      }
-    }
-    stage('Approval') {
-      steps {
-        script {
-          echo "waiting for approval."
-          sleep 10
+    stages {
+        stage('Delay') {
+            // This stage introduces a delay before proceeding with the build
+            steps {
+                script {
+                    // Sleep for 10 seconds or adjust the time as needed
+                    sleep time: 10, unit: 'SECONDS'
+                }
+            }
         }
-      }
+        stage('Build') {
+            steps {
+                echo "fetch the source code from the directory path specified by the environment variable"
+                echo "compile the code and generate any necessary artifacts"
+            }
+        }
+        stage('Test') {
+            steps {
+                echo "unit tests"
+                echo "integration tests"
+            }
+        }
+        stage('Code Quality Check') {
+            steps {
+                echo "Check the quality of the code"
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo "deploy the application to a testing environment specified by the environment variable"
+            }
+        }
+        stage('Approval') {
+            steps {
+                script {
+                    echo "waiting for approval."
+                    sleep 10
+                }
+            }
+        }
+        stage('Deploy to Production') {
+            steps {
+                echo "deploy the code to the production environment: ${env.PRODUCTION_ENVIRONMENT}"
+            }
+        }
     }
-    stage('Deploy to Production') {
-      steps {
-        echo "deploy the code to the production environment: ${env.PRODUCTION_ENVIRONMENT}"
-      }
-    }
-  }
 }
