--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,117 +1,66 @@
 pipeline {
     agent any
     triggers {
-        // Trigger the pipeline on a push to the repository
-        githubPush()
+        // Poll SCM every 2 minutes
+        pollSCM('H/2 * * * *')
     }
-    environment {
-        DIRECTORY_PATH = 'dummy path to code'
-        STAGING_SERVER = 'AWS EC2 - Staging'
-        PRODUCTION_SERVER = 'AWS EC2 - Production'
+    tools {
+        // Specify Maven tool
+        maven 'Maven'
     }
     stages {
-        stage('Delay') {
-            steps {
-                script {
-                    // Sleep for 10 seconds
-                    sleep time: 10, unit: 'SECONDS'
-                }
-            }
-        }
         stage('Build') {
             steps {
-                echo "Building the code using Maven"
-                script {
-                    if (isUnix()) {
-                        sh 'mvn clean install'
-                    } else {
-                        bat 'mvn clean install'
-                    }
-                }
+                // Use Maven to build the project
+                sh 'mvn clean package'
             }
         }
         stage('Unit and Integration Tests') {
             steps {
-                echo "Running unit tests with Maven"
-                script {
-                    if (isUnix()) {
-                        sh 'mvn test'
-                        echo "Running integration tests"
-                        sh 'mvn verify'
-                    } else {
-                        bat 'mvn test'
-                        echo "Running integration tests"
-                        bat 'mvn verify'
-                    }
-                }
+                // Run tests using Maven
+                sh 'mvn test'
             }
         }
         stage('Code Analysis') {
             steps {
-                echo "Analysing code with SonarQube"
-                script {
-                    if (isUnix()) {
-                        sh 'mvn sonar:sonar'
-                    } else {
-                        bat 'mvn sonar:sonar'
-                    }
-                }
+                // Using SonarQube for code analysis
+                sh 'mvn sonar:sonar'
             }
         }
         stage('Security Scan') {
             steps {
-                echo "Performing security scan with OWASP ZAP"
-                script {
-                    if (isUnix()) {
-                        sh 'zap-cli start'
-                        sh 'zap-cli quick-scan --self-contained --spider -r ${DIRECTORY_PATH}'
-                        sh 'zap-cli stop'
-                    } else {
-                        bat 'zap-cli start'
-                        bat 'zap-cli quick-scan --self-contained --spider -r %DIRECTORY_PATH%'
-                        bat 'zap-cli stop'
-                    }
-                }
+                // Running OWASP ZAP security scan
+                sh './zap.sh'
             }
         }
         stage('Deploy to Staging') {
             steps {
-                echo "Deploying to staging server: ${env.STAGING_SERVER}"
-                script {
-                    if (isUnix()) {
-                        sh 'scp -i your-key.pem target/*.war ec2-user@${STAGING_SERVER}:/path/to/deploy'
-                    } else {
-                        // Use PSCP
-                        bat 'pscp -i your-key.ppk target\\*.war ec2-user@${STAGING_SERVER}:/path/to/deploy'
-                    }
-                }
+                // Simulating deployment to AWS EC2 staging
+                sh 'echo "Deploying to staging environment..."'
+                // Additional deployment steps would go here
             }
         }
         stage('Integration Tests on Staging') {
             steps {
-                echo "Running integration tests on the staging server"
-                script {
-                    if (isUnix()) {
-                        sh 'ssh -i your-key.pem ec2-user@${STAGING_SERVER} "cd /path/to/deploy && mvn integration-test"'
-                    } else {
-                        // Use Plink
-                        bat 'plink -i your-key.ppk ec2-user@${STAGING_SERVER} "cd /path/to/deploy && mvn integration-test"'
-                    }
-                }
+                // Run integration tests on the staging server
+                sh 'echo "Running integration tests in staging..."'
+                // Additional testing steps would go here
             }
         }
         stage('Deploy to Production') {
             steps {
-                echo "Deploying to production server: ${env.PRODUCTION_SERVER}"
-                script {
-                    if (isUnix()) {
-                        sh 'scp -i your-key.pem target/*.war ec2-user@${PRODUCTION_SERVER}:/path/to/deploy'
-                    } else {
-                        // Use PSCP
-                        bat 'pscp -i your-key.ppk target\\*.war ec2-user@${PRODUCTION_SERVER}:/path/to/deploy'
-                    }
-                }
+                // Simulating deployment to AWS EC2 production
+                sh 'echo "Deploying to production environment..."'
+                // Additional deployment steps would go here
             }
+        }
+    }
+    post {
+        success {
+            echo 'Pipeline completed successfully.'
+        }
+        failure {
+            echo 'Pipeline failed.'
         }
     }
 }
